updated some spacing issues

--- a/style.css
+++ b/style.css
@@ -129,6 +129,20 @@ body{
 
 }
 
+#facebook{
+    
+}
+
+#title{
+    padding: 10px;
+    margin-left: -12px;
+}
+
+#subtitle{
+    padding: 20px;
+    margin-left: -20px;
+}
+
 #login > a{
     margin: 18px 0;
     text-decoration: none;
